--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,9 +1,67 @@
+$lightGray: #f6f6f6;
+$borderGray: #adadad;
+
 html, body {
   padding: 0;
   margin: 0;
   height: 100%;
+  width: 100%;
 }
 
-#app {
-  background-color: red;
+#page {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+  width: 100%;
+}
+
+#topNav {
+  background: red;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+}
+
+main {
+  width: 100%;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  /* flex config for children */
+  display: flex;
+  flex-direction: row;
+}
+
+main .leftNav {
+  flex: 0.2;
+  background: $lightGray;
+  padding: 10px;
+  border-right: $borderGray 1px solid;
+}
+
+main .content {
+  flex: 0.5;
+  padding: 50px;
+}
+
+#footer {
+  display: none;
+  flex-grow: 0;
+  flex-shrink: 1;
+  height: 30px;
+  background: $lightGray;
+}
+
+.dropzone {
+  width: 100%;
+  height:  80px;
+  background: repeating-linear-gradient(
+                  45deg,
+                  #e7e7e7,
+                  #e7e7e7 10px,
+                  #f5f5f5 10px,
+                  #f5f5f5 20px
+  );
+  border-radius: 5px;
+  color: #8f8f8f;
 }
