--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,6 +1,10 @@
 $lightGray: #f6f6f6;
 $borderGray: #adadad;
 
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/mixins";
+
 html, body {
   padding: 0;
   margin: 0;
@@ -40,8 +44,14 @@ main .leftNav {
 }
 
 main .content {
-  flex: 0.5;
-  padding: 50px;
+  flex: 0.7;
+  @include media-breakpoint-down(md) {
+    padding: 10px;
+    flex: 0.9;
+  }
+  @include media-breakpoint-up(md) {
+    padding: 50px;
+  }
 }
 
 #footer {
