--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -56,3 +56,10 @@ main .content {
   width: 100%;
   height: 100%;
 }
+
+.editorNav {
+  flex: 0.2;
+  background: $lightGray;
+  padding: 10px;
+  border-right: $borderGray 1px solid;
+}
