--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -67,6 +67,7 @@ main .content {
 .editor {
   width: 100%;
   height: 100%;
+  display: flex;
 }
 
 .editorNav {
@@ -77,7 +78,5 @@ main .content {
 }
 
 .CodeMirror {
-  width: 100%;
-  height: 100%;
-  overflow:auto;
+  min-height: 100%;
 }
