--- a/src/js/react/components/AnnotationEditorCodeMirror.scss
+++ b/src/js/react/components/AnnotationEditorCodeMirror.scss
@@ -1,7 +1,9 @@
 
 // Alternative 1
 
+/*
 .annotation {
+    cursor: pointer;
     padding: 4px 4px 4px 4px;
     outline: 1px solid #000;
     background: #95e345;
@@ -31,17 +33,20 @@
     margin-left: 8px;
 }
 
+
+ */
 // Alternative 2
-/*
+
 .annotation {
+    cursor: pointer;
     padding: 2px 0px 2px 0px;
-    background: #95e345;
+    background: #e300c5;
     border-radius: 5px;
     -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.6);
     -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.6);
     box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.6);
-    line-height: 1.9em;
-    z-index: 1;
+    //line-height: 1.9em;
+    //z-index: 1;
 
     -webkit-box-decoration-break: slice;
     -o-box-decoration-break: slice;
@@ -59,7 +64,7 @@
     padding: 0px 3px 0px 3px;
     margin-left: 3px;
     margin-bottom: 2px;
-    line-height: 1.6em;
+    //line-height: 1.6em;
     -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75);
@@ -70,4 +75,4 @@
 .annotationText {
     margin-left: 5px;
 }
-*/
+
