--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -64,12 +64,6 @@ main .content {
   background: $lightGray;
 }
 
-.editor {
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
-
 .editorNav {
   flex: 0.2;
   background: $lightGray;
@@ -77,8 +71,14 @@ main .content {
   border-right: $borderGray 1px solid;
 }
 
+.editor {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: stretch;
+}
+
 .CodeMirror {
   min-height: 100%;
-  //max-height: 100%;
   font-size: 16px;
 }
