Selection of documents, annotationset and corpora

--- a/src/js/react/components/AnnotationEditorCodeMirror.scss
+++ b/src/js/react/components/AnnotationEditorCodeMirror.scss
@@ -54,7 +54,7 @@
 
 .annotationType {
     position:relative;
-    display: inline-block;
+    display: inline;
     text-align: center;
     background: #ffffff;
     border: 3px #000000;
