--- a/src/js/react/components/searchableDropdown/SearchableDropdown.scss
+++ b/src/js/react/components/searchableDropdown/SearchableDropdown.scss
@@ -44,10 +44,13 @@
 
 .dropdownInput {
     background: #fff;
-    width: 100%;
+    width: 98%;
 }
 
 .dropdownItems {
     background: #fff;
     width: 100%;
+    -webkit-box-shadow: 0px 0px 12px 4px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 12px 4px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 12px 4px rgba(0,0,0,0.75);
 }
