feat: Integration with auth0

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -82,3 +82,9 @@ main .content {
   min-height: 100%;
   font-size: 16px;
 }
+
+button.login {
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+}
