wip: Integration of Annotation Tasks [skip release]

--- a/src/js/react/components/LoginButton/LoginButton.scss
+++ b/src/js/react/components/LoginButton/LoginButton.scss
@@ -4,8 +4,8 @@ img.user-icon {
     border-radius: 50%;
 }
 
-div.dropdown-menu {
-    width: 350px;
+a.user-toggle {
+    color: white;
 }
 
 div.user-info {
