--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,17 +1,22 @@
-$lightGray: #f6f6f6;
-$borderGray: #adadad;
+@import "~bootstrap/scss/functions";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+@import "~codemirror/lib/codemirror.css";
+@import "bootstrap-overload";
+@import "wizzard";
 
-@import "../../node_modules/bootstrap/scss/functions";
-@import "../../node_modules/bootstrap/scss/variables";
-@import "../../node_modules/bootstrap/scss/mixins";
-
-@import "../../node_modules/codemirror/lib/codemirror.css";
+$lightGray: #414141;
+$borderGray: #d7d7d7;
 
 html, body {
   padding: 0;
   margin: 0;
   height: 100%;
   width: 100%;
+}
+
+.w-60 {
+  width: 60%;
 }
 
 #page {
@@ -22,10 +27,49 @@ html, body {
 }
 
 #topNav {
-  background: red;
-  flex-grow: 0;
-  flex-shrink: 1;
-  flex-basis: auto;
+  $itemHoverBackground: #b3b3b3;
+
+  z-index: 2000;
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,1);
+  -moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,1);
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,1);
+
+  #brand {
+    border: none;
+  }
+
+  a.nav-link {
+    border: 1px transparent solid;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 3px 30px 3px 3px;
+  }
+
+  a.nav-link:hover {
+    border: 1px $itemHoverBackground solid;
+  }
+
+  a.nav-link.active {
+    border: 1px white solid;
+  }
+
+  div.dropdown {
+    a.nav-link::after {
+      margin-left: 15px;
+    }
+
+    .show {
+      > a.nav-link {
+        border: 1px white solid;
+      }
+    }
+
+    svg, i {
+      margin-left: 3px;
+      margin-right: 7px;
+    }
+  }
+
 }
 
 main {
@@ -36,23 +80,18 @@ main {
   /* flex config for children */
   display: flex;
   flex-direction: row;
+  overflow: hidden;
 }
 
-main .leftNav {
-  flex: 0.2;
-  background: $lightGray;
-  padding: 10px;
-  border-right: $borderGray 1px solid;
-}
+section#content {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 50px;
+  overflow-y: auto;
 
-main .content {
-  flex: 0.7;
-  @include media-breakpoint-down(md) {
-    padding: 10px;
-    flex: 0.9;
-  }
-  @include media-breakpoint-up(md) {
-    padding: 50px;
+  form {
+    width: 100%;
   }
 }
 
@@ -83,3 +122,5 @@ button.login {
   width: 40px;
   height: 40px;
 }
+
+
