--- a/src/js/react/components/AutoCollapseSidebar/AutoCollapseSidebar.scss
+++ b/src/js/react/components/AutoCollapseSidebar/AutoCollapseSidebar.scss
@@ -1,5 +1,5 @@
 $sidebar-bg-color: #6c757d !default;
-$sidebar-color: #efefef !default;
+$sidebar-color: #d9d9d9 !default;
 $sidebar-width: 270px !default;
 $sidebar-collapsed-width: 80px !default;
 $highlight-color: #ffffff !default;
